# GenAi-capstone

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: ai.py  auth.py  inventory.py  products.py  tenants.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: session.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  audit_log.py  document_chunk.py  inventory_transaction.py  mixins.py  product.py  tenant.py  uploaded_document.py  user.py
backend/app/repositories/: inventory_repo.py  product_repo.py  tenant_repo.py  user_repo.py
backend/app/schemas/: ai.py  auth.py  common.py  inventory.py  product.py  tenant.py
backend/app/scripts/: seed.py
backend/app/services/: audit.py  rate_limit.py  rbac.py
backend/app/services/ai/: assistant.py  invoice.py  nl_search.py  provider.py  sql_tools.py  summary.py
backend/app/services/rag/: pipeline.py  qdrant_client.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/nav/: Sidebar.tsx  Topbar.tsx
frontend/src/components/ui/: Badge.tsx  (+6 more)
frontend/src/layouts/: AppLayout.tsx  AuthLayout.tsx
frontend/src/routes/: AppRoutes.tsx  RequireAuth.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/store/: auth.tsx  authStore.ts
(+15 files in other folders)
